# GP1_Manager

./: .gitignore  AGENTS.md  README.md  SKILL_f1_ui.md  SKILL_f1_ui_v2.md  TODO.md  alembic.ini  main.py  main_menu.gd  main_menu.gd.uid  main_menu.tscn  main_menu_scene_notes.gd  main_menu_scene_notes.gd.uid  project.godot  pyproject.toml  skills-lock.json
.github/agents/: gp1_manager_1.agent.md
.godot/editor/: create_recent.Resource  editor_layout.cfg  filesystem_cache10  main_menu.tscn-folding-8b03550a1e82db90fe95208a9e9dbb82.cfg  project_metadata.cfg  recent_dirs  scene.gltf-editstate-626434da51c2d0d2a7191ef99cf05259.cfg  scene.gltf-folding-626434da51c2d0d2a7191ef99cf05259.cfg  script_editor_cache.cfg
.godot/imported/: Material.002_baseColor.jpeg-b1be85b41f83cde4af9b9eb215488cab.ctex  Material.002_baseColor.jpeg-b1be85b41f83cde4af9b9eb215488cab.md5  Material.002_baseColor.jpeg-b1be85b41f83cde4af9b9eb215488cab.s3tc.ctex  Material.005_baseColor.jpeg-f239f82aa46d2db41fb273be556010e3.ctex  Material.005_baseColor.jpeg-f239f82aa46d2db41fb273be556010e3.md5  Material.005_baseColor.jpeg-f239f82aa46d2db41fb273be556010e3.s3tc.ctex  icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex  icon.svg-218a8f2b3041327d8a5756f3a245f83b.md5  scene.gltf-626434da51c2d0d2a7191ef99cf05259.md5
alembic/: env.py
arcade_view/: __init__.py  race_window.py
arcade_view/sprites/: __init__.py
backend/: main.py
backend/core/: __init__.py
backend/db/: main_menu.tscn  models.py
data/track/: canada_circuit.json
f1_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
graphics/car/: scene.gltf.import
tests/f1_manager/: test_race_simulator.py
tools/: circuit_calibrator.html  db_inspector.py  seed_db.py
ui/screens/: dashboard.html  finances.html  garage.html  hud_carrera.html  (+4 more)
(+22 files in other folders)
