[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.0",
    "arcade>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "numpy>=1.26",          # simulación numérica
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "ui*", "data*", "alembic*", "graphics*", "arcade_view*"]

[project.scripts]
f1-manager = "main:main"
db-inspector = "tools.db_inspector:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"
